修改代理延测链接，故障转移策略组测试时间改为默认的10分钟一次。

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.05.29
+# > Update Date: 2023.06.24
 
 ############################################################################
 # > SSID策略组里 “Coldvvater” 和 “Coldvvater_5G” 为WiFi的SSID名称示例，
@@ -128,9 +128,9 @@ Final = select, Proxy, DIRECT, no-alert=0, hidden=0, include-all-proxies=0
 # > 节点切换
 Proxy = select, Auto, Fallback, SSIDPolicy, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0, include-all-proxies=0
 # > 自动选择
-Auto = url-test, policy-path=此处填写订阅链接, url=http://cp.cloudflare.com/generate_204, interval=300, update-interval=86400, tolerance=50
+Auto = url-test, policy-path=此处填写订阅链接, url=http://www.apple.com/library/test/success.html, interval=300, update-interval=86400, tolerance=50
 # > 故障转移
-Fallback = fallback, url=http://cp.cloudflare.com/generate_204, interval=180, update-interval=86400, include-other-group="Auto"
+Fallback = fallback, url=http://www.apple.com/library/test/success.html, interval=600, update-interval=86400, include-other-group="Auto"
 # > SSID策略
 SSIDPolicy = subnet, default = Auto, "Coldvvater" = DIRECT, "Coldvvater_5G" = DIRECT
 # > 国外网站
