--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -266,6 +266,16 @@ apple.com = server:223.5.5.5
 *icloud.com = server:223.5.5.5
 *icloud.com.cn = server:223.5.5.5
 *testflight.apple.com = server:8.8.4.4
+# > App Store Download acceleration
+token.safebrowsing.apple = 17.253.85.207
+proxy.safebrowsing.apple = 17.253.85.208
+iosapps.itunes.apple.com = 17.253.85.201
+iosapps.itunes.g.aaplimg.com = 17.253.85.206
+k128-iosapps-all.gslb.ksyuncdn.com = 17.253.85.201
+iosapps.itunes.apple.com.m.alikunlun.net = 17.253.85.201
+iosapps.itunes.apple.com.download.ks-cdn.com = 17.253.85.201
+# hls.itunes.apple.com.mwcname.com = 17.253.85.201
+iosapps-cn-lb.dl-apple.com.akadns.net = 17.253.85.201
 # > Alibaba
 *.alicdn.com = server:223.5.5.5
 aliyun.com = server:223.5.5.5
