--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.06.24
+# > Update Date: 2023.06.26
 
 ############################################################################
 # > SSID策略组里 “Coldvvater” 和 “Coldvvater_5G” 为WiFi的SSID名称示例，
@@ -9,6 +9,9 @@
 ############################################################################
 
 [General]
+# > 日志等级
+loglevel = notify
+
 # > 增强版 Wi-Fi 助理
 # 在 Wi-Fi 网络不佳时尝试使用数据网络建立连接，请仅当使用不限量的数据流量时开启，默认关闭：false,开启把false修改为true即可。
 wifi-assist = false
@@ -54,9 +57,6 @@ skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10
 include-all-networks = false
 # 包含本地网络请求
 include-local-networks = false
-
-# > 日志等级
-loglevel = notify
 
 # > 当遇到 REJECT 策略时返回错误页
 show-error-page-for-reject = true
@@ -130,7 +130,7 @@ Proxy = select, Auto, Fallback, SSIDPolicy, HongKong, TaiWan, Singapore, Japan, 
 # > 自动选择
 Auto = url-test, policy-path=此处填写订阅链接, url=http://www.apple.com/library/test/success.html, interval=300, update-interval=86400, tolerance=50
 # > 故障转移
-Fallback = fallback, url=http://www.apple.com/library/test/success.html, interval=600, update-interval=86400, include-other-group="Auto"
+Fallback = fallback, interval=600, update-interval=0, include-other-group="Auto"
 # > SSID策略
 SSIDPolicy = subnet, default = Auto, "Coldvvater" = DIRECT, "Coldvvater_5G" = DIRECT
 # > 国外网站
@@ -167,17 +167,17 @@ Microsoft = select, DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, 
 Games = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 
 # > 香港节点
-HongKong = select, policy-regex-filter=港|🇭🇰|香港|HK|Hong, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
+HongKong = select, policy-regex-filter=港|🇭🇰|香港|HK|Hong, evaluate-before-use=true, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto", persistent=0
 # > 台湾节点
-TaiWan = select, policy-regex-filter=台|🇹🇼|台湾|TW|Tai, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
+TaiWan = select, policy-regex-filter=台|🇹🇼|台湾|TW|Tai, evaluate-before-use=true, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto", persistent=0
 # > 狮城节点
-Singapore = select, policy-regex-filter=坡|🇸🇬|新加坡|狮城|SG|Singapore, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
+Singapore = select, policy-regex-filter=坡|🇸🇬|新加坡|狮城|SG|Singapore, evaluate-before-use=true, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto", persistent=0
 # > 日本节点
-Japan = select, policy-regex-filter=日|🇯🇵|日本|JP|Japan, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
+Japan = select, policy-regex-filter=日|🇯🇵|日本|JP|Japan, evaluate-before-use=true, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto", persistent=0
 # > 美国节点
-America = select, policy-regex-filter=美|🇺🇲|美国|US|States|American, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
+America = select, policy-regex-filter=美|🇺🇲|美国|US|States|American, evaluate-before-use=true, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto", persistent=0
 # > 其他节点
-Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|Tai|🇯🇵|日|JP|Japan|🇸🇬|坡|狮城|SG|Singapore|🇺🇸|美|US|States|American|Music).)*$, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
+Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|Tai|🇯🇵|日|JP|Japan|🇸🇬|坡|狮城|SG|Singapore|🇺🇸|美|US|States|American|Music).)*$, evaluate-before-use=true, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto", persistent=0
 
 [Rule]
 # > 隐私网络
@@ -281,17 +281,17 @@ iosapps-cn-lb.dl-apple.com.akadns.net = 17.253.85.201
 aliyun.com = server:223.5.5.5
 *.aliyun.com = server:223.5.5.5
 taobao.com = server:223.6.6.6
-*.taobao.com = server:223.6.6.6
-tmall.com = server:223.6.6.6
-*.tmall.com = server:223.6.6.6
+*.taobao.com = server:223.5.5.5
+tmall.com = server:223.5.5.5
+*.tmall.com = server:223.5.5.5
 # > JD
 jd.com = server:119.29.29.29
-*.jd.com = server:119.28.28.28
+*.jd.com = server:119.29.29.29
 # > Tencent
-*.qq.com = server:119.28.28.28
-*.tencent.com = server:119.28.28.28
-weixin.com = server:119.28.28.28
-*.weixin.com = server:119.28.28.28
+*.qq.com = server:119.29.29.29
+*.tencent.com = server:119.29.29.29
+weixin.com = server:119.29.29.29
+*.weixin.com = server:119.29.29.29
 # > bilibili
 bilibili.com = server:119.29.29.29
 *.bilibili.com = server:119.29.29.29
