--- a/Stash/Clash/Config/Evolve.yaml
+++ b/Stash/Clash/Config/Evolve.yaml
@@ -1,11 +1,9 @@
-# Stash/Clash/(Premium/Meta) Config Make by Coldvvater
+# Stash/Clash/Premium/Meta Config Make by Coldvvater
 # TG Channel: https://t.me/Ison_Channel
 # GitHub: https://github.com/Coldvvater
-# Update Date: 2023.06.04
+# Update Date: 2023.06.24
 
 # 自选GEOIP数据库推荐使用: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country.mmdb
-
-subscribe-url:        # 填上你的订阅链接用于Stash获取机场流量信息并在主页显示
 
 mixed-port: 7890      # 混合端口，HTTP和SOCKS5用一个端口
 allow-lan: true       # 允许局域网的连接（共享代理）
@@ -53,17 +51,42 @@ dns:
     - https://223.5.5.5/dns-query
     - https://1.12.12.12/dns-query
 
-# 此处为修正 Stash 因从 WiFi 切换至蜂窝网络时 DNS 无法及时更新而导致 fake-ip 失效某些网站无法打开问题
-# 请在 Stash APP 的设置页面 "网络设置" 中开启 "Fallback DNS" 以使用此功能
-  fallback: #!replace
-    - https://dns.alidns.com/dns-query
-
-  fallback-filter: 
-    geoip: false
-    geoip-code: CN
-
-    ipcidr:
-      - '198.18.0.1/16'
+hosts:
+# '*.clash.dev': 127.0.0.1
+# '.dev': 127.0.0.1
+# 'alpha.clash.dev': '::1'
+# test.com: [1.1.1.1, 2.2.2.2]
+# clash.lan: clash # clash 为特别字段，将加入本地所有网卡的地址
+# baidu.com: google.com # 只允许配置一个别名
+  # > IPv6
+  "ip6-localhost": "::1" # IPv6 Localhost
+  "ip6-loopback": "::1" # IPv6 Loopback
+  "ip6-localnet": "fe00::0" # IPv6 Link-Local
+  "ip6-mcastprefix": "ff00::0" # IPv6 Multicast
+  "ip6-allnodes": "ff02::1" # IPv6 All Nodes
+  "ip6-allrouters": "ff02::2" # IPv6 All Routers
+  "ip6-allhosts": "ff02::3" # IPv6 All Hosts
+  # > Firebase Cloud Messaging
+  "talk.google.com": "108.177.125.188" # Firebase Cloud Messaging
+  "mtalk.google.com": "108.177.125.188" # Firebase Cloud Messaging
+  "alt1-mtalk.google.com": "3.3.3.3" # Firebase Cloud Messaging
+  "alt2-mtalk.google.com": "3.3.3.3" # Firebase Cloud Messaging
+  "alt3-mtalk.google.com": "74.125.200.188" # Firebase Cloud Messaging
+  "alt4-mtalk.google.com": "74.125.200.188" # Firebase Cloud Messaging
+  "alt5-mtalk.google.com": "3.3.3.3" # Firebase Cloud Messaging
+  "alt6-mtalk.google.com": "3.3.3.3" # Firebase Cloud Messaging
+  "alt7-mtalk.google.com": "74.125.200.188" # Firebase Cloud Messaging
+  "alt8-mtalk.google.com": "3.3.3.3" # Firebase Cloud Messaging
+  # > APP Store下载加速
+  "token.safebrowsing.apple": "17.253.85.207"
+  "proxy.safebrowsing.apple": "17.253.85.208"
+  "iosapps.itunes.apple.com": "17.253.85.201"
+  "iosapps.itunes.g.aaplimg.com": "17.253.85.206"
+  "k128-iosapps-all.gslb.ksyuncdn.com": "17.253.85.201"
+  "iosapps.itunes.apple.com.m.alikunlun.net": "17.253.85.201"
+  "iosapps.itunes.apple.com.download.ks-cdn.com": "17.253.85.201"
+  #"hls.itunes.apple.com.mwcname.com": 17.253.85.201"
+  "iosapps-cn-lb.dl-apple.com.akadns.net": "17.253.85.201"
 
 ###锚点###
 
