--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -130,7 +130,7 @@ Proxy = select, Auto, Fallback, SSIDPolicy, HongKong, TaiWan, Singapore, Japan, 
 # > 自动选择
 Auto = url-test, policy-path=此处填写订阅链接, url=http://www.apple.com/library/test/success.html, interval=300, update-interval=86400, tolerance=50
 # > 故障转移
-Fallback = fallback, interval=600, update-interval=0, include-other-group="Auto"
+Fallback = fallback, interval=600, include-all-proxies=0, include-other-group="Auto"
 # > SSID策略
 SSIDPolicy = subnet, default = Auto, "Coldvvater" = DIRECT, "Coldvvater_5G" = DIRECT
 # > 国外网站
@@ -167,17 +167,17 @@ Microsoft = select, DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, 
 Games = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 
 # > 香港节点
-HongKong = select, policy-regex-filter=港|🇭🇰|香港|HK|Hong, evaluate-before-use=true, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto", persistent=0
+HongKong = select, policy-regex-filter=港|🇭🇰|香港|HK|Hong, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 # > 台湾节点
-TaiWan = select, policy-regex-filter=台|🇹🇼|台湾|TW|Tai, evaluate-before-use=true, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto", persistent=0
+TaiWan = select, policy-regex-filter=台|🇹🇼|台湾|TW|Tai, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 # > 狮城节点
-Singapore = select, policy-regex-filter=坡|🇸🇬|新加坡|狮城|SG|Singapore, evaluate-before-use=true, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto", persistent=0
+Singapore = select, policy-regex-filter=坡|🇸🇬|新加坡|狮城|SG|Singapore, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 # > 日本节点
-Japan = select, policy-regex-filter=日|🇯🇵|日本|JP|Japan, evaluate-before-use=true, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto", persistent=0
+Japan = select, policy-regex-filter=日|🇯🇵|日本|JP|Japan, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 # > 美国节点
-America = select, policy-regex-filter=美|🇺🇲|美国|US|States|American, evaluate-before-use=true, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto", persistent=0
+America = select, policy-regex-filter=美|🇺🇲|美国|US|States|American, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 # > 其他节点
-Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|Tai|🇯🇵|日|JP|Japan|🇸🇬|坡|狮城|SG|Singapore|🇺🇸|美|US|States|American|Music).)*$, evaluate-before-use=true, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto", persistent=0
+Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|Tai|🇯🇵|日|JP|Japan|🇸🇬|坡|狮城|SG|Singapore|🇺🇸|美|US|States|American|Music).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 
 [Rule]
 # > 隐私网络
