--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,12 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.06.26
-
-############################################################################
-# > SSID策略组里 “Coldvvater” 和 “Coldvvater_5G” 为WiFi的SSID名称示例，
-# > 可自行修改为自己家里的WiFi名称。
-############################################################################
+# > Update Date: 2023.06.28
 
 [General]
 # > 日志等级
@@ -79,7 +74,7 @@ dns-server = 223.5.5.5,119.29.29.29,114.114.114.114
 # > 加密的DNS服务器(如无必要不建议使用)
 # encrypted-dns-server = https://223.5.5.5/dns-query, https://1.12.12.12/dns-query
 # > Hijack DNS
-hijack-dns = 8.8.8.8:53, 8.8.4.4:53
+hijack-dns = *:53
 # > 关闭 DOH 的服务端证书验证
 doh-skip-cert-verification = true
 # > etc/hosts 读取 DNS 记录
@@ -93,9 +88,6 @@ udp-policy-not-supported-behaviour = REJECT
 
 # > 提高处理 UDP 流量优先级
 udp-priority = true
-
-# > 切换网络后不再重新进行 VPN 配置
-fast-switch = true
 
 # > 隐藏 VPN 图标
 hide-vpn-icon = false
@@ -215,6 +207,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TestFlight/TestFlight.list,Global
 
 # > 苹果服务
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple.list,Apple
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_Domain.list,Apple
 
 # > 谷歌服务
@@ -247,78 +240,6 @@ GEOIP,CN,DIRECT
 
 # > DNS 查询失败走 Final 规则
 FINAL,Final,dns-failed
-
-[Host]
-# > 域名指定 DNS 映射
-*.tw = server:1.1.1.1
-localhost = 127.0.0.1
-# IPv6
-ip6-localhost = ::1
-ip6-loopback = ::1
-# > Firebase Cloud Messaging
-mtalk.google.com = 108.177.125.188
-# > Google Dl
-dl.google.com = server:119.29.29.29
-dl.l.google.com = server:119.29.29.29
-update.googleapis.com = server:119.29.29.29
-# > Apple
-apple.com = server:223.5.5.5
-*icloud.com = server:223.5.5.5
-*icloud.com.cn = server:223.5.5.5
-*testflight.apple.com = server:8.8.4.4
-# > App Store Download acceleration
-token.safebrowsing.apple = 17.253.85.207
-proxy.safebrowsing.apple = 17.253.85.208
-iosapps.itunes.apple.com = 17.253.85.201
-iosapps.itunes.g.aaplimg.com = 17.253.85.206
-k128-iosapps-all.gslb.ksyuncdn.com = 17.253.85.201
-iosapps.itunes.apple.com.m.alikunlun.net = 17.253.85.201
-iosapps.itunes.apple.com.download.ks-cdn.com = 17.253.85.201
-# hls.itunes.apple.com.mwcname.com = 17.253.85.201
-iosapps-cn-lb.dl-apple.com.akadns.net = 17.253.85.201
-# > Alibaba
-*.alicdn.com = server:223.5.5.5
-aliyun.com = server:223.5.5.5
-*.aliyun.com = server:223.5.5.5
-taobao.com = server:223.6.6.6
-*.taobao.com = server:223.5.5.5
-tmall.com = server:223.5.5.5
-*.tmall.com = server:223.5.5.5
-# > JD
-jd.com = server:119.29.29.29
-*.jd.com = server:119.29.29.29
-# > Tencent
-*.qq.com = server:119.29.29.29
-*.tencent.com = server:119.29.29.29
-weixin.com = server:119.29.29.29
-*.weixin.com = server:119.29.29.29
-# > bilibili
-bilibili.com = server:119.29.29.29
-*.bilibili.com = server:119.29.29.29
-hdslb.com = server:119.29.29.29
-# > NetEase
-163.com = server:119.29.29.29
-*.163.com = server:119.29.29.29
-126.com = server:119.29.29.29
-*.126.com = server:119.29.29.29
-*.126.net = server:119.29.29.29
-*.127.net = server:119.29.29.29
-*.netease.com = server:119.29.29.29
-# > xiaomi
-mi.com = server:119.29.29.29
-*.mi.com = server:119.29.29.29
-xiaomi.com = server:119.29.29.29
-*.xiaomi.com = server:119.29.29.29
-# > Baidu
-*.baidu.com = server:119.29.29.29
-*.bdstatic.com = server:119.29.29.29
-# > Others
-*.unicompayment.com = server:119.29.29.29
-*.ximalaya.com = server:119.29.29.29
-*.vercel.app = server:119.29.29.29
-*.vercel.com = server:119.29.29.29
-# > Local Area Network
-*.lan = server:syslib
 
 [MITM]
 # > VIF 对原始 TCP 流量进行解密
