更新分流规则

--- a/Stash/Clash/Config/Evolve.ini
+++ b/Stash/Clash/Config/Evolve.ini
@@ -7,7 +7,7 @@ ruleset=Disney+,https://rules.kr328.app/disney.yaml
 ruleset=Emby,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Emby/Emby.yaml
 ruleset=TaiWan,https://rules.kr328.app/bahamut.yaml
 ruleset=Streaming,https://rules.kr328.app/bilibili@%21cn.yaml
-ruleset=BiliBili,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BiliBili/BiliBili.yaml
+ruleset=BiliBili,,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Providers/Ruleset/Bilibili.yaml
 ruleset=Spotify,https://rules.kr328.app/spotify.yaml
 ruleset=NetEaseMusic,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/NetEaseMusic/NetEaseMusic.yaml
 ruleset=TikTok,https://rules.kr328.app/tiktok.yaml
