更新分流规则

--- a/Stash/Clash/Config/Evolve.ini
+++ b/Stash/Clash/Config/Evolve.ini
@@ -1,16 +1,16 @@
 [custom]
 ruleset=DIRECT,https://rules.kr328.app/private.yaml
-ruleset=America,https://rules.kr328.app/openai.yaml
+ruleset=America,https://cdn.jsdelivr.net/gh/Coldvvater/Mononoke@master/Stash/RuleSet/OpenAI.yaml
 ruleset=YouTube,https://rules.kr328.app/youtube.yaml
 ruleset=NETFLIX,https://rules.kr328.app/netflix.yaml
 ruleset=Disney+,https://rules.kr328.app/disney.yaml
 ruleset=Emby,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Emby/Emby.yaml
 ruleset=TaiWan,https://rules.kr328.app/bahamut.yaml
 ruleset=Streaming,https://rules.kr328.app/bilibili@%21cn.yaml
-ruleset=BiliBili,,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Providers/Ruleset/Bilibili.yaml
+ruleset=BiliBili,,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Providers/Ruleset/Bilibili.yaml
 ruleset=Spotify,https://rules.kr328.app/spotify.yaml
 ruleset=NetEaseMusic,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/NetEaseMusic/NetEaseMusic.yaml
-ruleset=TikTok,https://rules.kr328.app/tiktok.yaml
+ruleset=TikTok,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/TikTok/TikTok.yaml
 ruleset=Streaming,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Domain.yaml
 ruleset=Telegram,https://rules.kr328.app/telegram.yaml
 ruleset=Global,https://rules.kr328.app/github.yaml
@@ -21,11 +21,11 @@ ruleset=Apple,https://rules.kr328.app/apple.yaml
 ruleset=Google,https://rules.kr328.app/google.yaml
 ruleset=Microsoft,https://rules.kr328.app/microsoft.yaml
 ruleset=Games,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/Game.yaml
-ruleset=Global,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global_Domain.yaml
+ruleset=Global,https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/proxy.txt
 ruleset=Google,[]GEOIP,google
 ruleset=Telegram,[]GEOIP,telegram
 ruleset=NETFLIX,[]GEOIP,netflix
-ruleset=Mainland,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China_Domain.yaml
+ruleset=Mainland,https://rules.kr328.app/cn.yaml
 ruleset=DIRECT,[]GEOIP,LAN
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=Final,[]FINAL
