--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.07.03
+# > Update Date: 2023.07.23
 
 [General]
 # > 日志等级
@@ -124,7 +124,7 @@ Auto = url-test, policy-path=此处填写订阅链接, url=http://www.apple.com/
 # > 故障转移
 Fallback = fallback, interval=600, include-all-proxies=0, include-other-group="Auto"
 # > SSID策略
-SSIDPolicy = subnet, default = Auto, "Coldvvater" = DIRECT, "Coldvvater_5G" = DIRECT
+SSIDPolicy = subnet, default = Auto, "此处改成你家里WiFi名称" = DIRECT, "此处改成你家里WiFi名称_5G" = DIRECT
 # > 国外网站
 Global = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 国内网站
