--- a/Stash/Clash/Config/Evolve.yaml
+++ b/Stash/Clash/Config/Evolve.yaml
@@ -1,5 +1,5 @@
 # Stash/Clash/Premium/Meta Config Make by Coldvvater
-# TG Channel: https://t.me/Ison_Channel
+# TG Channel: https://t.me/Coldvvater_Channel
 # GitHub: https://github.com/Coldvvater
 # Update Date: 2023.07.24
 
