--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
-# > TG Channel: https://t.me/Ison_Channel
+# > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.07.23
+# > Update Date: 2023.07.24
 
 [General]
 # > 日志等级
