--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.07.24
+# > Update Date: 2023.09.06
 
 [General]
 # > 日志等级
@@ -129,6 +129,8 @@ SSIDPolicy = subnet, default = Auto, "此处改成你家里WiFi名称" = DIRECT,
 Global = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 国内网站
 Mainland = select, DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
+# > 人工智能
+OpenAI = select, America, Japan, Singapore, TaiWan, Others, no-alert=0, hidden=0
 # > 油管视频
 YouTube = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 奈飞视频
@@ -176,7 +178,7 @@ Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|T
 DOMAIN-SET,https://raw.githubusercontent.com/Loyalsoldier/surge-rules/release/private.txt,DIRECT
 
 # > OpenAI
-RULE-SET,https://raw.githubusercontent.com/Coldvvater/Mononoke/master/Surge/Rules/OpenAI.list,America
+RULE-SET,https://raw.githubusercontent.com/Coldvvater/Mononoke/master/Surge/Rules/OpenAI.list,OpenAI
 
 # > 流媒体(以及其他未指定策略媒体。)
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list,YouTube
