--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.09.27
+# > Update Date: 2023.10.15
 
 [General]
 # > 日志等级
@@ -101,6 +101,10 @@ http-api-tls = false
 # Safari输入127.0.0.1:6171,填入HTTP-API密码即可。
 http-api-web-dashboard = true
 
+[Ponte]
+# > 通过代理使用 Ponte
+client-proxy-name = Proxy
+
 [Proxy Group]
 # > 策略组
 # > 漏网之鱼
@@ -162,6 +166,9 @@ America = select, policy-regex-filter=美|🇺🇲|美国|US|States|American, no
 Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|Tai|🇯🇵|日|JP|Japan|🇸🇬|坡|狮城|SG|Singapore|🇺🇸|美|US|States|American|Music).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 
 [Rule]
+# > 屏蔽 UDP 443
+AND,((PROTOCOL,UDP), (DEST-PORT,443)),REJECT-NO-DROP
+
 # > 隐私网络
 DOMAIN-SET,https://raw.githubusercontent.com/Loyalsoldier/surge-rules/release/private.txt,DIRECT
 
