--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.10.15
+# > Update Date: 2023.10.23
 
 [General]
 # > 日志等级
@@ -41,8 +41,8 @@ socks5-listen = 127.0.0.1:6153
 # > Wi-Fi 不是主接口则使用SSID组的默认策略
 use-default-policy-if-wifi-not-primary = false
 
-# > 兼容模式 (仅 iOS)
-# compatibility-mode = false
+# > 系统代理 (+VIF)接管优先
+# compatibility-mode = 1
 
 # > 跳过代理
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com, seed-sequoia.siri.apple.com, sequoia.apple.com
@@ -167,7 +167,7 @@ Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|T
 
 [Rule]
 # > 屏蔽 UDP 443
-AND,((PROTOCOL,UDP), (DEST-PORT,443)),REJECT-NO-DROP
+AND,((PROTOCOL,UDP),(DEST-PORT,443)),REJECT-NO-DROP
 
 # > 隐私网络
 DOMAIN-SET,https://raw.githubusercontent.com/Loyalsoldier/surge-rules/release/private.txt,DIRECT
@@ -240,10 +240,8 @@ GEOIP,CN,DIRECT
 FINAL,Final,dns-failed
 
 [MITM]
-# > VIF 对原始 TCP 流量进行解密
-skip-server-cert-verify = true
 # > 跳过服务端证书验证
-tcp-connection = true
+skip-server-cert-verify = true
 # > MITM over HTTP/2
 h2 = true
 
