--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.10.23
+# > Update Date: 2023.10.26
 
 [General]
 # > 日志等级
@@ -166,6 +166,10 @@ America = select, policy-regex-filter=美|🇺🇲|美国|US|States|American, no
 Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|Tai|🇯🇵|日|JP|Japan|🇸🇬|坡|狮城|SG|Singapore|🇺🇸|美|US|States|American|Music).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 
 [Rule]
+# > 规则分流
+# 通过ponte访问
+IP-CIDR,192.168.0.0/16,Ponte,no-resolve
+
 # > 屏蔽 UDP 443
 AND,((PROTOCOL,UDP),(DEST-PORT,443)),REJECT-NO-DROP
 
