--- a/Stash/Clash/Config/Evolve.ini
+++ b/Stash/Clash/Config/Evolve.ini
@@ -9,25 +9,24 @@ ruleset=TaiWan,https://rules.kr328.app/bahamut.yaml
 ruleset=Streaming,https://rules.kr328.app/bilibili@%21cn.yaml
 ruleset=BiliBili,,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Providers/Ruleset/Bilibili.yaml
 ruleset=Spotify,https://rules.kr328.app/spotify.yaml
-ruleset=NetEaseMusic,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/NetEaseMusic/NetEaseMusic.yaml
+ruleset=NetEaseMusic,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/NetEaseMusic/NetEaseMusic_No_Resolve.yaml
 ruleset=TikTok,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/TikTok/TikTok.yaml
 ruleset=Streaming,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Domain.yaml
-ruleset=Telegram,https://rules.kr328.app/telegram.yaml
+ruleset=Telegram,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Telegram/Telegram_No_Resolve.yaml
 ruleset=Global,https://rules.kr328.app/github.yaml
 ruleset=Global,https://rules.kr328.app/bing.yaml
-ruleset=Global,https://rules.kr328.app/twitter.yaml
+ruleset=Global,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitter_No_Resolve.yaml
 ruleset=Global,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/TestFlight/TestFlight.yaml
 ruleset=Apple,https://rules.kr328.app/apple.yaml
 ruleset=Google,https://rules.kr328.app/google.yaml
 ruleset=Microsoft,https://rules.kr328.app/microsoft.yaml
-ruleset=Games,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/Game.yaml
-ruleset=Global,https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/proxy.txt
+ruleset=Games,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/Game_No_Resolve.yaml
+ruleset=Global,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global_Domain.yaml
 ruleset=Google,[]GEOIP,google
-ruleset=Telegram,[]GEOIP,telegram
 ruleset=NETFLIX,[]GEOIP,netflix
-ruleset=Mainland,https://rules.kr328.app/cn.yaml
+ruleset=Mainland,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China_Domain.yaml
 ruleset=DIRECT,[]GEOIP,LAN
-ruleset=DIRECT,[]GEOIP,CN
+ruleset=Mainland,[]GEOIP,CN
 ruleset=Final,[]FINAL
 ;设置规则标志位
 
