修正分流规则

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.10.26
+# > Update Date: 2023.10.27
 
 [General]
 # > 日志等级
@@ -42,7 +42,7 @@ socks5-listen = 127.0.0.1:6153
 use-default-policy-if-wifi-not-primary = false
 
 # > 系统代理 (+VIF)接管优先
-# compatibility-mode = 1
+compatibility-mode = 1
 
 # > 跳过代理
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com, seed-sequoia.siri.apple.com, sequoia.apple.com
@@ -167,9 +167,6 @@ Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|T
 
 [Rule]
 # > 规则分流
-# 通过ponte访问
-IP-CIDR,192.168.0.0/16,Ponte,no-resolve
-
 # > 屏蔽 UDP 443
 AND,((PROTOCOL,UDP),(DEST-PORT,443)),REJECT-NO-DROP
 
@@ -194,7 +191,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia_Domain.list,Streaming
 
 # > Telegram
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list,Telegram
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list,Telegram
 
 # > GitHub
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GitHub/GitHub.list,Global
@@ -223,12 +220,10 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 
 # > 国外网站
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list,Global
-# > 国外网站
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list,Global
 
 # > 国内网站
 RULE-SET,https://raw.githubusercontent.com/Blankwonder/surge-list/master/cn.list,Mainland
-# > 国内网站
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/China/China_Domain.list,Mainland
 
 # > 防止应用循环请求
