--- a/Stash/Clash/Config/Evolve.yaml
+++ b/Stash/Clash/Config/Evolve.yaml
@@ -1,34 +1,32 @@
 # Stash/Clash/Premium/Meta Config Make by Coldvvater
 # TG Channel: https://t.me/Coldvvater_Channel
 # GitHub: https://github.com/Coldvvater
-# Update Date: 2023.10.27
+# Update Date: 2023.10.28
 
-# 自选GEOIP数据库推荐使用: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country.mmdb
-
-mixed-port: 7890      # 混合端口，HTTP和SOCKS5用一个端口
-allow-lan: true       # 允许局域网的连接（共享代理）
-bind-address: "*"     # 监听IP白名单，可绑定单个IPv4和v6地址，"*" 为绑定所有IP地址，仅在将allow-lan设置为true时适用
+mixed-port: 7890                    # 混合端口，HTTP和SOCKS5用一个端口
+allow-lan: true                     # 允许局域网的连接（共享代理）
+bind-address: "*"                   # 监听IP白名单，可绑定单个IPv4和v6地址，"*" 为绑定所有IP地址，仅在将allow-lan设置为true时适用
                       
 
-ipv6: true            # 开启 IPv6 总开关，关闭阻断所有 IPv6 链接和屏蔽 DNS 请求 AAAA 记录
-mode: rule            # 规则模式：rule（规则） / global（全局代理）/ direct（全局直连）/ script (脚本)
-log-level: info       # 设置日志输出级别 (5 个级别：silent / error / warning / info / debug）
+ipv6: true                           # 开启 IPv6 总开关，关闭阻断所有 IPv6 链接和屏蔽 DNS 请求 AAAA 记录
+mode: rule                           # 规则模式：rule（规则） / global（全局代理）/ direct（全局直连）/ script (脚本)
+log-level: info                      # 设置日志输出级别 (5 个级别：silent / error / warning / info / debug）
 
-external-controller: 127.0.0.1:9090   # 外部控制器监听地址，可以使用 RESTful API 来控制你的 clash 内核
+external-controller: 127.0.0.1:9090  # 外部控制器监听地址，可以使用 RESTful API 来控制你的 clash 内核
 
 dns:
-  enable: true             # 关闭将使用系统 DNS
-  ipv6: true               # IPV6解析开关；如果为false，将返回ipv6结果为空
-  enhanced-mode: fake-ip   # 模式：redir-host或fake-ip
-  listen: 0.0.0.0:53       # DNS 监听地址
+  enable: true                       # 关闭将使用系统 DNS
+  ipv6: true                         # IPV6解析开关；如果为false，将返回ipv6结果为空
+  enhanced-mode: fake-ip             # 模式：redir-host或fake-ip
+  listen: 0.0.0.0:53                 # DNS 监听地址
   default-nameserver: [223.5.5.5, 119.29.29.29, 114.114.114.114]
-                                  # 解析非IP的dns用的dns服务器，只支持纯IP，（Meta可为其加密）
+                                     # 解析非IP的dns用的dns服务器，只支持纯IP，（Meta可为其加密）
   nameserver: [https://223.5.5.5/dns-query, https://1.12.12.12/dns-query]
-                                  # 默认DNS服务器，支持udp/tcp/dot/doh/doq
+                                     # 默认DNS服务器，支持udp/tcp/dot/doh/doq
 
-  fake-ip-range: 198.18.0.1/16    # Fake-IP 解析地址池
+  fake-ip-range: 198.18.0.1/16       # Fake-IP 解析地址池
   fake-ip-filter: ['*.lan', 'cable.auth.com', '*.msftconnecttest.com', '*.msftncsi.com', 'network-test.debian.org', 'detectportal.firefox.com', 'resolver1.opendns.com', '*.srv.nintendo.net', '*.stun.playstation.net', 'xbox.*.microsoft.com', '*.xboxlive.com', 'stun.*', 'global.turn.twilio.com', 'global.stun.twilio.com', 'localhost.*.qq.com', 'localhost.*.weixin.qq.com', '*.logon.battlenet.com.cn', '*.logon.battle.net', '*.blzstatic.cn', 'music.163.com', '*.music.163.com', '*.126.net', 'musicapi.taihe.com', 'music.taihe.com', 'songsearch.kugou.com', 'trackercdn.kugou.com', '*.kuwo.cn', 'api-jooxtt.sanook.com', 'api.joox.com', 'joox.com', 'y.qq.com', '*.y.qq.com', 'streamoc.music.tc.qq.com', 'mobileoc.music.tc.qq.com', 'isure.stream.qqmusic.qq.com', 'dl.stream.qqmusic.qq.com', 'aqqmusic.tc.qq.com', 'amobile.music.tc.qq.com', '*.xiami.com', '*.music.migu.cn', 'music.migu.cn', 'proxy.golang.org', '*.mcdn.bilivideo.cn', '*.cmpassport.com', 'id6.me', 'open.e.189.cn', 'mdn.open.wo.cn', 'opencloud.wostore.cn', 'auth.wosms.cn', '*.jegotrip.com.cn', '*.icitymobile.mobi', '*.pingan.com.cn', '*.cmbchina.com', 'pool.ntp.org', '*.pool.ntp.org', 'ntp.*.com', 'time.*.com', 'ntp?.*.com', 'time?.*.com', 'time.*.gov', 'time.*.edu.cn', '*.ntp.org.cn', 'PDC._msDCS.*.*', 'DC._msDCS.*.*', 'GC._msDCS.*.*']
-                                  # Fake-ip 过滤，列表中的域名返回真实IP
+                                     # Fake-ip 过滤，列表中的域名返回真实IP
 
 ###锚点###
 
@@ -45,7 +43,7 @@ g: &g {type: select, proxies: [Proxy, Auto, Fallback, HongKong, TaiWan, Singapor
 
 m: &m {type: select, proxies: [DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others]}
 
-proxies:   # 本地服务器
+proxies: null    # 本地服务器
 
 # 订阅引用相关
 u: &u {type: select, use: [Subscribe]}
@@ -153,7 +151,7 @@ rule-providers: # 远程规则集
  YouTube: {<<: *d, path: ./ruleset/YouTube.yaml, url: https://rules.kr328.app/youtube.yaml}
 
 # 奈飞视频
- Netflix: {<<: *d, path: ./ruleset/Netflix.yaml, url: https://rules.kr328.app/netflix.yaml}
+ Netflix: {<<: *c, path: ./ruleset/Netflix.yaml, url: https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Providers/Ruleset/Netflix.yaml}
 
 # 迪士尼+
  Disney: {<<: *d, path: ./ruleset/Disney.yaml, url: https://rules.kr328.app/disney.yaml}
@@ -201,7 +199,7 @@ rule-providers: # 远程规则集
  Apple: {<<: *d, path: ./ruleset/Apple.yaml, url: https://rules.kr328.app/apple.yaml}
 
 # 谷歌服务
- Google: {<<: *d, path: ./ruleset/Google.yaml, url: https://rules.kr328.app/google.yaml}
+ Google: {<<: *c, path: ./ruleset/Google.yaml, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google_No_Resolve.yaml}
 
 # 微软服务
  Microsoft: {<<: *d, path: ./ruleset/Microsoft.yaml, url: https://rules.kr328.app/microsoft.yaml}
@@ -243,8 +241,6 @@ rules: # 分流规则引用
   - RULE-SET,Microsoft,Microsoft
   - RULE-SET,Games,Games
   - RULE-SET,Global,Global
-  - GEOIP,google,Google
-  - GEOIP,netflix,NETFLIX
   - RULE-SET,China,Mainland
   - GEOIP,private,DIRECT
   - GEOIP,CN,Mainland
